<resources>
    <string name="app_name">My Mall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seva">Seva</string>
    <string name="donations">Donation</string>
    <string name="reports">Report</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>

</resources>